Enforce flush ordering between contexts in GPU process on macOS.

There are assumptions in many places that OrderingBarrierCHROMIUM is
sufficient to ensure command ordering between producers and consumers
in Chromium's pipeline. However, unless clients were carefully
written, it was easy to miss a necessary glFlush, or put one in the
wrong place. On macOS there is no implicit flush when switching
contexts, though one exists on some other platforms (e.g. GLX), and
exists implicitly when using virtualized GL contexts.

Fix this at the lowest level in the GPU process by flushing when
switching contexts on macOS. Also fix bug in command ordering between
WebGL's DrawingBuffer and consumers; i.e., the compositor.

BUG=769488

Change-Id: I46faa7537a3e2e12e3094a6aba3a85378a677c3f